add_library(fpm_dep
    toml-f/src/tomlf.f90
    toml-f/src/tomlf/structure.f90
    toml-f/src/tomlf/diagnostic.f90
    toml-f/src/tomlf/terminal.f90
    toml-f/src/tomlf/de.f90
    toml-f/src/tomlf/type/keyval.f90
    toml-f/src/tomlf/type/array.f90
    toml-f/src/tomlf/type/table.f90
    toml-f/src/tomlf/type/value.f90
    toml-f/src/tomlf/utils.f90
    toml-f/src/tomlf/error.f90
    toml-f/src/tomlf/build.f90
    toml-f/src/tomlf/datetime.f90
    toml-f/src/tomlf/utils/io.f90
    toml-f/src/tomlf/utils/sort.f90
    toml-f/src/tomlf/constants.f90
    toml-f/src/tomlf/build/keyval.f90
    toml-f/src/tomlf/build/merge.f90
    toml-f/src/tomlf/build/array.f90
    toml-f/src/tomlf/build/table.f90
    toml-f/src/tomlf/build/path.f90
    toml-f/src/tomlf/version.f90
    toml-f/src/tomlf/ser.f90
    toml-f/src/tomlf/structure/ordered_map.f90
    toml-f/src/tomlf/structure/node.f90
    toml-f/src/tomlf/structure/array_list.f90
    toml-f/src/tomlf/structure/list.f90
    toml-f/src/tomlf/structure/map.f90
    toml-f/src/tomlf/all.f90
    toml-f/src/tomlf/de/context.f90
    toml-f/src/tomlf/de/parser.f90
    toml-f/src/tomlf/de/token.f90
    toml-f/src/tomlf/de/abc.f90
    toml-f/src/tomlf/de/lexer.f90
    toml-f/src/tomlf/type.f90
    M_CLI2/src/M_CLI2.F90
    fortran-regex/src/regex.f90
    jonquil/src/jonquil.f90
    jonquil/src/jonquil/parser.f90
    jonquil/src/jonquil/version.f90
    jonquil/src/jonquil/ser.f90
    jonquil/src/jonquil/lexer.f90
    fortran-shlex/src/shlex_module.f90
)
